--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -181,7 +181,7 @@ citecolor=MidnightBlue }
 
 \input{Inhalt/Anhang_Forecasting}
 
-\input{Inhalt/Anhang_R}
+%\input{Inhalt/Anhang_R}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TODO Bilder
@@ -201,8 +201,8 @@ citecolor=MidnightBlue }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \listoffigures
 \listoftables
-\printglossary[title=Glossar]
-\printglossary[type=\acronymtype, title=Akronyme]
+%\printglossary[title=Glossar]
+%\printglossary[type=\acronymtype, title=Akronyme]
 % keine deutschen Überschriften
 %\printglossaries 
 
