--- a/Text/Arbeit/Inhalt/Abstract.tex
+++ b/Text/Arbeit/Inhalt/Abstract.tex
@@ -5,5 +5,13 @@
 \end{center}
 \normalsize
 \vspace{15mm}
-\textit{\todo{Abstract}}
+\textit{Forecasting und Predictive Analytics sind zwei evidenzbasierte Methoden,
+die helfen können, bessere Urteile zu fällen und bessere Entscheidungen zu
+treffen. Allerdings wird die Verbreitung dieser Methoden auf taktischer und
+strategischer Ebene schwierig werden, da insbesondere dort Widerstände zu
+erwarten sind. Es bleibt zu hoffen, dass der Wille, bessere 
+Entscheidungsgrundlagen zu erhalten, stärker ist. Eine Literaturrecherche 
+zu der Verbreitung von Predictive Analytics im öffentlichen Sektor ergab, dass
+solche Anwendungen hauptsächlich auf operativer Ebene implementiert werden und
+bestätigte damit obigen Verdacht.}
 \end{abstract}
