--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -143,8 +143,7 @@ In Deutschland werden bisher nur die Methoden von Punkt (1) verwendet, mit denen
 Delikte wie Wohnungseinbrüche behandelt werden (vgl. \cite{Heuberger}).
 Abbildung~\ref{pic:Predictive_Policing} zeigt hierbei das Vorgehen\footnote{
 Das Original ist in \cite{Bode}, S.~2 zu finden.
-}. Dies ist ähnlich zu den
-allgemeinen Vorgehensmodellen aus Abschnitt~\xcom. Insbesondere die anwendungstypischen Details werden
+}. Die anwendungstypischen Details werden
 im folgenden Text erläutert:
 
 \begin{description}
@@ -205,7 +204,7 @@ beigetragen hat (vgl. \cite{Gerstner}, S.~85).
 
 \subsection{Wahlen und Politik}
 
-Neben den in Abschnitt~\xcom erwähnten Text Mining Anwendungen zur Verbesserung der Serviceleistungen
+Neben den bereits erwähnten Text Mining Anwendungen zur Verbesserung der Serviceleistungen
 von Behörden existieren noch weitere \glqq{experimentelle}\grqq{} Anwendungen. So konnte Matter durch
 die Analyse teilstrukturierter Internetdokumente herausfinden, wie stark öffentliche Ämter in den USA
 mit religiösen Personen besetzt sind (vgl. \cite{Matter}). Der \glqq{Bible Belt}\grqq{}\footnote{
@@ -360,7 +359,7 @@ Das System wird mit CT-Bildern als Daten trainiert, wobei auf den Trainingsbilde
 
 Am Beispiel der Radiologie lässt sich erkennen, wie ein Fachgebiet durch äußeren Druck (Haftungsklagen) zur Anwendung von Predictive
 Analytics gedrängt wird. Für den Radiologen können solche Systeme eine Gefahr für seine Arbeit darstellen, wenn sein Tätigkeitsbereich
-zunehmend automatisiert wird. Allerdings ändert der externe Druck die \glqq{Spielregeln}\grqq{} (siehe S.~\xcom), sodass
+zunehmend automatisiert wird. Allerdings ändert der externe Druck die \glqq{Spielregeln}\grqq{}, sodass
 sich Predictive Analytics zunehmend etabliert.
 
 % TODO Missbrauch -> Proctor
