--- a/Text/Arbeit/Inhalt/POES_Intro.tex
+++ b/Text/Arbeit/Inhalt/POES_Intro.tex
@@ -82,7 +82,7 @@ Für die Originalgrafik siehe \cite{Watson}.
 Zudem sollte es keine grundsätzlichen technologischen Probleme bei der Einführung von
 Predictive Analytics geben. Grundlegende statistische Methoden sind bereits in
 Tabellenkalkulationsprogrammen verfügbar, für erweiterte Anwendungen existieren zahlreiche
-Varianten von Programmbibliotheken (siehe Anhang~\xcom) und Data Warehouse Lösungen sind
+Varianten von Programmbibliotheken und Data Warehouse Lösungen sind
 ebenfalls für den öffentlichen Sektor erhältlich (vgl. \cite{IT_Novum}, S.~11).
 
 %-------------------------------------------------------------------------------
@@ -144,7 +144,7 @@ Hier wird vereinfacht angenommen, dass eine Person die Urteile fällt und die En
 trifft. Die Ausführungen sind aber auch auf Gruppen von Entscheidern (Entscheidungsgremien)
 anwendbar.
 }, da sie die Schwächen seiner Urteile offenbart. Die typischen Rechtfertigungsmuster
-(Belief System Defenses, siehe S.~\xcom)
+(Belief System Defenses)
 sind dann nicht mehr anwendbar.
 
 \item[(2) Verlust der Arbeit:] \hfill \\
@@ -187,8 +187,7 @@ entweder gar nicht statt, oder die Erkenntnisse werden ignoriert.
 
 Die zentrale Motivation dafür evidenzbasierte Methoden in einer Organisation
 einzuführen, ist die Möglichkeit zu erhalten, bessere Entscheidungen zu treffen.
-Dies bringt sowohl Vorteile gegenüber Konkurrenten als auch Vorteile beim
-\glqq{Spiel gegen die Natur}\grqq{} (siehe S.~\xcom). So sind beispielsweise Staaten Stammkunden
+Dies bringt sowohl Vorteile gegenüber Konkurrenten als auch allgemeine Vorteile. So sind beispielsweise Staaten Stammkunden
 für Prognosen und Urteile von Experten (vgl. \cite{Roetheli}, S.~256) und haben damit ein
 starkes Interesse daran, diese zu verbessern. Es gibt auch Impulse, die direkt aus den Nachrichtendiensten
 kommen. Schon 1951 hat der CIA-Analyst Sherman Kent\footnote{
@@ -245,7 +244,7 @@ die Ängste abgemildert oder ganz aufgehoben werden.
 
 Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
 Forecasting und Predictive Analytics, bietet es sich an, die
-\gls{glos:Spieltheorie} anzuwenden. Es werden einfache spieltheoretische Modelle
+Spieltheorie anzuwenden. Es werden einfache spieltheoretische Modelle
 präsentiert, die die obigen Szenarien verdeutlichen sollen.
 
 \subsection{Einleitung zur Spieltheorie}
@@ -300,7 +299,7 @@ Kooperieren bedeutet für diesen Anwendungsfall, evidenzbasierte Methoden einzuf
 folgenden Text als \glqq{progressive}\grqq{} Strategie bezeichnet. Hintergehen bedeutet dagegen, die
 Einführung der neuen Methoden zu verhindern, was \glqq{traditionelle}\grqq{} Strategie genannt wird.
  
-Somit ist Deadlock das Modell für das pessimistische Szenario (aus Abschnitt~\xcom). 
+Somit ist Deadlock das Modell für das pessimistische Szenario. 
 Hier wollen beide Teilnehmer traditionell spielen, da sie kein Interesse daran haben, evidenzbasierte Methoden
 in der Organisation einzuführen. Die Präferenzen für das Spielergebnis beider Spieler bei Deadlock sind:
 
